# ferret

./: .gitignore  package-lock.json  package.json  recipes.json
client/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
client/.svelte-kit/output/client/_app/: error.svelte-8a44a144.js  start-77b07c2f.js  version.json
client/.svelte-kit/output/client/_app/pages/: index.svelte-58bda2d0.js
client/.svelte-kit/output/prerendered/: fallback.html
client/.svelte-kit/output/server/: manifest.js
client/.svelte-kit/output/server/entries/pages/: index.svelte.js
client/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
client/.svelte-kit/types/src/routes/: index.d.ts
client/src/lib/: Button.svelte  Card.svelte  Container.svelte  CreateComment.svelte  Header.svelte  Post.svelte  Posts.svelte  Search.svelte  stores.js  stores.ts  timeago.js
client/src/lib/auth/: Login.svelte  Profile.svelte  ProfileItem.svelte  config.js  service.js
client/src/routes/: __layout.svelte  about.svelte  create_post.svelte  index.js  index.svelte  search.js  search.svelte
client/src/routes/api/: comments.js  posts.js
client/src/routes/post/: [id].js  [id].svelte  [post_id].js  [post_id].svelte
client/src/routes/user/: [user_id].svelte  [user_id].ts
server/: Cargo.toml  recipes.json
server/migrations/2022-03-29-112010_create_posts/: up.sql
server/migrations/2022-04-26-101918_comments/: up.sql
server/migrations/2022-04-28-083244_cascade/: down.sql  up.sql
server/migrations/2022-05-04-201625_solved/: down.sql  up.sql
server/migrations/2022-05-11-131947_deleted/: down.sql  up.sql
server/src/: auth.rs  lib.rs  main.rs  schema.rs
server/src/db/: mod.rs  models.rs
src/routes/: index.svelte
svelte-app/: package.json
(+1 files in other folders)
