[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
color-eyre = "0.6.1"
dirs = "4.0.0"
dotenv = "0.15.0"
eyre = "0.6.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
slotmap = { version = "1.0.6", features = ["serde"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
