[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["headers"] }
color-eyre = "0.6.1"
dirs = "4.0.0"
dotenv = "0.15.0"
eyre = "0.6.7"
flume = { version = "0.10.12", features = ["async"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures-core = "0.3.21"
jsonwebtoken = "8.0.1"
once_cell = "1.10.0"
parking_lot = { version = "0.12.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
slotmap = { version = "1.0.6", features = ["serde"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
dashmap = { version = "5.2.0", features = ["serde"] }
futures = "0.3.21"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = "0.11.10"
tower-http = { version = "0.2.5", features = ["trace"] }
hyper = "0.14.18"
tracing-tree = "0.2.0"
tracing-error = "0.2.0"
